Fix for long title
In smaller screen, long title would be cut off.

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1118,7 +1118,7 @@ body {
     z-index: 340;
     left: 50%;
     bottom: 470px;
-    /*    top: 0;*/
+    /*    top: -40px;*/
     width: 100%;
     max-width: 600px;
     transform: translateX(-50%);
@@ -1164,6 +1164,13 @@ body {
     }
     #site-title div {
         font-size: 50px;
+    }
+}
+
+@media (max-height: 850px) {
+    #site-title {
+        bottom: auto;
+        top: -40px;
     }
 }
 
